Widget vertical stretch fix

--- a/Attendex/src/components/styles/PeriodTracker.css
+++ b/Attendex/src/components/styles/PeriodTracker.css
@@ -16,7 +16,7 @@
     background: #1D1D1D;
     box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
     width: 40%;
-    height: 52vh;
+    max-height: 506px;
 }
 
 .timer {
@@ -27,4 +27,7 @@
     font-weight: 700;
     line-height: normal; 
     text-align: center;
+    max-width: 308px;
+    max-height: 184px;
 }
+
